spinner alignment fix
git-tfs-id: [https://tfsnpt.int.thomson.com:443/tfs/Cobalt_Collection/]$/Cobalt eBook Builder/Development;C993440

--- a/ebookManager/WebContent/theme/layout.css
+++ b/ebookManager/WebContent/theme/layout.css
@@ -859,14 +859,17 @@ div.ui-datepicker{
 	width: 100%;
 	height: 100%;
 	transition: background-color 0.5s ease;
+	display: flex;
+	justify-content: center;
 }
 
 #sap-spinner {
 	max-width: 100%;
-	max-height: 100%;
 	margin: auto;
 	display: block;
 	transition: height 0.5s ease;
+	position: absolute;
+	max-height: 250px;
 }
 
 @keyframes spin {
@@ -885,7 +888,7 @@ div.ui-datepicker{
 }
 
 .sap-spinner-appeared {
-	height: 100%;
+	height: inherit;
 }
 
 .transparent-white {
